task5/tests/group/output/test6.out
lli: <stdin>:32:1: error: expected instruction opcode
Visiting While Node
^
